--- a/src/account/view/LoginDialog.fxml
+++ b/src/account/view/LoginDialog.fxml
@@ -3,17 +3,19 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="account.view.LoginDialogController">
+<AnchorPane prefHeight="430.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="account.view.LoginDialogController">
    <children>
       <Button layoutX="14.0" layoutY="361.0" mnemonicParsing="false" onAction="#handleLogin" prefHeight="30.0" prefWidth="125.0" text="Login" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0" />
       <Button layoutX="234.0" layoutY="361.0" mnemonicParsing="false" onAction="#handleRegister" prefHeight="30.0" prefWidth="125.0" text="Register" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0" />
-      <GridPane layoutX="14.0" layoutY="167.0" prefHeight="147.0" prefWidth="272.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0">
+      <GridPane layoutX="14.0" layoutY="204.0" prefHeight="130.0" prefWidth="272.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
@@ -30,10 +32,15 @@
             <TextField fx:id="passwordField" GridPane.rowIndex="3" />
          </children>
       </GridPane>
-      <Label layoutX="16.0" layoutY="73.0" text="Password Manager" textAlignment="CENTER">
+      <Label layoutX="71.0" layoutY="164.0" text="Skeleton Key" textAlignment="CENTER">
          <font>
-            <Font size="32.0" />
+            <Font size="28.0" />
          </font>
       </Label>
+      <ImageView fitHeight="130.0" fitWidth="114.0" layoutX="94.0" layoutY="27.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../skeletonkey.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
